# binnavi

./: .gitignore  .travis.yml  README.md  build.gradle  build.xml  deploy.gradle  index.html  jarBuilders.gradle  params.json  pom.xml
debug/: README.md
debug/client/: BaseConnection.cpp  BaseConnection.hpp  BaseSystem.cpp  BaseSystem.hpp  ConditionParser.cpp  ConditionParser.hpp  DebugClient.cpp  DebugClient.hpp  DebugException.hpp  DebugExceptionHandlingAction.hpp  DebuggerEventSettings.hpp  DebuggerOptions.hpp  InformationProvider.cpp  InformationProvider.hpp  SocketConnection.cpp  SocketConnection.hpp  commands.cpp  commands.hpp  defs.cpp  defs.hpp  errors.hpp  includer.hpp  logger.hpp  main.cpp
debug/client/conns/: GenericSocketFunctions.cpp  GenericSocketFunctions.hpp  LinuxSocket.cpp  LinuxSocket.hpp  OSXSocket.cpp  OSXSocket.hpp  WinCESocket.cpp  WinCESocket.hpp  WindowsSocket.cpp  WindowsSocket.hpp
debug/client/gdb/: BreakpointHandler.cpp  BreakpointHandler.hpp  GdbFactory.cpp  GdbFactory.hpp  GdbSystem.cpp  GdbSystem.hpp  IEventCallback.hpp  SerialTransport.cpp  SerialTransport.hpp  SimpleCallback.hpp  TcpTransport.cpp  TcpTransport.hpp  Transport.hpp  main.cpp  misc.cpp  misc.hpp  utils.cpp  (+1 more)
debug/client/windynamorio/: AbstractCommandReader.cc  AbstractCommandReader.h  BitReference.h  BreakpointInfo.h  CMakeLists.txt  DebugState.cc  DebugState.h  ScopedLocker.h  WinDynamoRioSystem.cpp  WinDynamoRioSystem.hpp  WinPipeCommandReader.cc  WinPipeCommandReader.h  common.h  drdebug.proto  dynamorio_client.cc  main.cpp
debug/zylibcpp/: makefile  makefile.arm  makefile.win
gradle/wrapper/: gradle-wrapper.properties
prebuilt/: README.md
prebuilt/linux_i386/: debugclient  gdb_client
wixsrc/: BinNaviPluginScripts.wxs  BinNaviPlugins.wxs  DebugClients.wxs  Doxyfile  Exporters.wxs  Manual.wxs  README.md  Setup-en-us.wxl  Setup.wxs  Tutorials.wxs  VersionInfo.wxi  binnavi-windows-installer.sln  binnavi-windows-installer.wixproj  build.scons
wixsrc/files/: Report_a_bug.url  license-icon.rtf  zynamics_Home_Page.url
wixsrc/mergemodules/: LICENSE
(+5621 files in other folders)
